# applemusicrp

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  AppleMusicRP.py  CODE_OF_CONDUCT.md  LICENSE  README.md  applemusicrp.py  build.bat  build.sh  build.zsh  pyproject.toml  requirements.txt  requirements_macos.txt  setup-win.py  setup.py  setup_win.py
.github/ISSUE_TEMPLATE/: bug_report.md  other.md
.github/workflows/: black.yml  codeql-analysis.yml  greetings.yml  python-app.yml
logos/: social-preview.psd
scripts/: getmusicinfo-legacy.applescript  getmusicinfo.applescript
src/applemusicrp/: __main__.py  applemusicrp.py  config.py  rpc.py  setup-win.py  setup.py  utils.py
src/applemusicrp/scripts/: getmusicinfo-legacy.applescript  getmusicinfo.applescript
